Add local + fix cursor + debug paralax

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danila | Developer | ML & Data</title>
-    <meta name="description" content="Данила - Developer, работаю с SQL, Greenplum, Python. Интересуюсь технологиями и разработкой. Портфолио с проектами RichCatering, Izumrudnyjbal и HH Vacancy Parser.">
-    <meta name="keywords" content="developer, sql, greenplum, python, data analysis, портфолио, разработчик, программист">
+    <meta name="description" content="Данила - Developer, автоматизация процессов и машинное обучение. Москва. Интересуюсь технологиями и разработкой. Портфолио с проектами RichCatering, Izumrudnyjbal и HH Vacancy Parser.">
+    <meta name="keywords" content="developer, sql, python, machine learning, автоматизация, москва, портфолио, разработчик, программист">
     <meta name="author" content="Danila">
     <meta property="og:title" content="Danila - Developer Portfolio">
     <meta property="og:description" content="Developer | SQL, Python, Data Analysis">
@@ -33,7 +33,7 @@
         </div>
         <div class="terminal-body" id="terminal">
             <div class="line">
-                <span class="prompt">danila@developer:~$</span>
+                <span class="prompt">danila@develop:~$</span>
                 <span class="command typing" id="intro-command"></span>
             </div>
             <div class="output" id="output"></div>
@@ -51,6 +51,9 @@
                     <h1 class="terminal-title-large">Данила</h1>
                     <p class="terminal-text">
                         <span class="keyword">Developer</span> | автоматизация процессов и машинное обучение
+                    </p>
+                    <p class="terminal-text">
+                        <span class="keyword">Москва</span>
                     </p>
                     <p class="terminal-text">
                         Интересуюсь технологиями, разработкой и анализом данных. Создаю решения для работы с большими объемами информации.
